--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,7 +66,9 @@ jobs:
               <key>NSHighResolutionCapable</key>
               <true/>
               <key>SUFeedURL</key>
-              <string>https://raw.githubusercontent.com/${{ github.repository }}/main/appcast.xml</string>
+              <string>https://github.com/${{ github.repository }}/releases/latest/download/appcast.xml</string>
+              <key>SUPublicEDKey</key>
+              <string>8xZu776RLohr7Jqld6HSdT/H3dPI6k3KXqvclpxgSgw=</string>
           </dict>
           </plist>
           EOF
