Use token input for gh-release action

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -100,10 +100,9 @@ jobs:
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}
           files: |
             Rovena-*.dmg
             appcast.xml
           draft: false
           prerelease: false
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
